--- a/src/components/middle/panes/HeaderPinnedMessage.module.scss
+++ b/src/components/middle/panes/HeaderPinnedMessage.module.scss
@@ -82,6 +82,7 @@
   cursor: var(--custom-cursor, pointer);
 
   position: relative;
+  z-index: 1;
 
   overflow: hidden;
   display: flex;
@@ -93,6 +94,8 @@
   padding: 0.25rem;
   padding-left: 0.375rem;
   border-radius: var(--border-radius-messages-small);
+
+  background-color: var(--color-background);
 
   &:hover:not(.no-hover) {
     background-color: var(--color-interactive-element-hover);
